# diaw

./: Cargo.toml  README.md  justfile
src/: encoding.rs  header.rs  lib.rs  listener.rs  main.rs  packet.rs  query.rs  question.rs  record.rs  resolve.rs
src/async/: listener.rs  mod.rs  query.rs  resolve.rs
src/simple/: mod.rs  query.rs  resolve.rs
tests/: test.rs
