[package]
name = "diaw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bytes = "1.4.0"
eyre = "0.6.8"
rand = { version = "0.8.5", features = ["small_rng"] }
socket2 = "0.5.3"
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
trust-dns-client = "0.23.0"
